# qtscripttemplate

./: .gitignore  README
buildplugin/: CMakeLists.txt  plugin_build.txt.in  plugin_typesystem.xml.in
